Add support to handle multiple robots in the robot simulation

--- a/app/assets/stylesheets/simulator.scss
+++ b/app/assets/stylesheets/simulator.scss
@@ -68,3 +68,9 @@ select {
 #outputBox {
   margin-top: 15px;
 }
+
+button.selected {
+  color: white;
+  background-color: #007bff;
+  border-color: #007bff;
+}
