--- a/app/views/simulator/index.html
+++ b/app/views/simulator/index.html
@@ -17,10 +17,13 @@
       <button id="place">PLACE</button>
     </div>
     <div class="button-container">
-      <button class="action-button" id="move">MOVE</button>
-      <button class="action-button" id="left">LEFT</button>
-      <button class="action-button" id="right">RIGHT</button>
-       <button class="action-button" id="report">REPORT</button>
+      <button class="action-button command" id="move">MOVE</button>
+      <button class="action-button command" id="left">LEFT</button>
+      <button class="action-button command" id="right">RIGHT</button>
+      <button class="action-button command" id="report">REPORT</button>
+
+      <button class="action-button robot-name" id="hadrian">HADRIAN</button>
+      <button class="action-button robot-name" id="ahmed">AHMED</button>
     </div>
 
     <button class="execute" id="execute">Execute</button>
